# bracelet

./: .gitignore
adxl367/: CMakeLists.txt  prj.conf  thingy91x_nrf9151_ns.overlay
adxl367/src/: main.c
bme688/: CMakeLists.txt  prj.conf  thingy91x_nrf9151_ns.overlay
bme688/src/: main.c
bmi270/: CMakeLists.txt  prj.conf  thingy91x_nrf9151_ns.overlay
bracelet/: CMakeLists.txt  Kconfig  prj.conf  sysbuild.conf  thingy91x_nrf9151_ns.overlay
bracelet/src/: data_manager.c  localization.c  localization_wifi.c  low_power_acl.c  lte_service.c  lte_service.h  main.c
bracelet/src/include/: app_events.h  data_manager.h
npm1300/: CMakeLists.txt  thingy91x_nrf9151_ns.overlay
npm1300/src/: fuel_gauge.c  main.c
scan/: CMakeLists.txt  prj.conf  sysbuild.conf
scan/src/: main.c
server_com/: Kconfig  prj.conf
server_com/src/: main.c
